1853.0

Made mulle-scion brewable. You can now brew it with:

~~~
brew tap mulle-kybernetik/software
brew install mulle-scion
~~~

mulle-scion is now more powerful with regards to parameters.
It is now possible to do this:

echo '--- {{ VALUE }} ---' | mulle-scion - keyvalue - VALUE="1848"

which produces predicatably

--- 1848 ---

Templates can be passed in via stdin and the replacement values can be given
as key=value arguments. This makes mulle-scion even more convenient to use
in shell scripts. You can also specify URLs instead of just file paths for
input.

There are now "hidden" environment variables WWW_ROOT, WWW_PORT, WWW_PLIST for
the webserver.


1852.0

### API change 

Redesigned the "convenience interface". Sorry but I just disliked the
proliferation of code, that separated **NSURL** and **NSString** by type. I used the
power of ObjC and simplified this without having to resort to degenerics ;)
In other words the` +descriptionWithTemplateURL:` method family is gone, just use
`+descriptionWithTemplateFile:` with either NSString or NSURL.

### LANGUAGE change 

I apparently goofed up the documentation in 1851 and made an incompatible change
so that **mulle-scion** choked up on its own documentation templates. Ahem. That
has been fixed, so that MulleScion now skips all scion tags, that are
immediately _followed_ by a backtick ` or a backquote \. This ought to be
harmless in my opinion, but results may vary.


1851.0

*** BIG CHANGE!!! FILTER REDESIGNED ***

I decided to convert the documentation from ASCII into markdown. For that I
needed a markdown filter. As it turns out, none of the libraries I found are
able to do incremental rendering (bummer). This meant, that the markdown filter
had to buffer all incoming strings until the endfilter was reached.
That broke a lot of stuff.

On a positive note, you can now nest filters and can tweak them a little with
optional parameters.


*** BIG CHANGE!!! ELSEFOR INSTEAD OF ELSE IN FOR-ENDFOR ***
