@@ -18,9 +18,25 @@ TMPARCHIVE="/tmp/${PROJECT}-${ARCHIVE}"
 if [ ! -f  "${TMPARCHIVE}" ]
 then
    curl -s -L -o "${TMPARCHIVE}" "${ARCHIVEURL}"
-   [ $? -ne 0 ] && exit 1
+   if [ $? -ne 0 -o ! -f "${TMPARCHIVE}" ] 
+   then
+      echo "Download failed" >&2
+      exit 1
+   fi
 else
    echo "using cached file ${TMPARCHIVE} instead of downloading again" >&2
+fi
+
+#
+# anything less than 17 KB is wrong 
+#
+size=`du -k "${TMPARCHIVE}" | awk '{ print $ 1}'`
+if [ $size -lt 17 ]
+then
+   echo "Archive truncated or missing" >&2
+   cat "${TMPARCHIVE}" >&2
+   rm "${TMPARCHIVE}"
+   exit 1
 fi
 
 HASH=`shasum -p -a 256 "${TMPARCHIVE}" | awk '{ print $1 }'`
@@ -40,7 +56,7 @@ class ${PROJECT} < Formula
   end
 
   test do
-    system  "test", "-x", "#{bin}/${TARGET}"
+    system  "(", "cd", tests", ";", "./run-all-scion-tests.sh" , "#{bin}/${TARGET}", ")"
   end
 end
 EOF
