@@ -2,4 +2,4 @@
     name = xxx;
 }
 xxx
-__NSCFString
+1
